--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
 		<div class="row">
 			<div class="col-lg-12 text-left">
 				<h1 class="mt-5">Welcome to Patchouli Store</h1>
-				<p class="lead">Shop now!</p>
+				<p class="lead">Select your favorite perfume!</p>
 			</div>
 			<div id="results" class="col-lg-8 text-center order-3"></div>
 			<div class="col-lg-4 text-center order-2">
