--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,7 @@
 			<div id="" class="col-lg-8 text-center order-3">
                 <table class="table">
                     <thead>
+                        <th></th>
                         <th>Category</th>
                          <th>Name</th>
                           <th>Price</th>
@@ -45,9 +46,11 @@
                     <tbody>
                     <% data.forEach(function (perfum){ %>
                     <tr>
+                        <td><%= perfum.select%></td>
                         <td><%= perfum.perfumCategory%></td>
                         <td><%= perfum.name%></td>
                         <td><%= perfum.price%></td>
+                        
                     </tr>
                     	<% }); %>
                     </tbody>
@@ -78,7 +81,7 @@
 		</div>
 	</div>
 	<footer class="footer">
-		<div class="container">	<span class="text-muted">&copy; Anaiana Ramos 2019</span>
+		<div class="container">	<span class="text-muted">&copy; Anaiana Ramos 2020</span>
 		</div>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
