--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 			<div id="" class="col-lg-8 text-center order-3">
                 <table class="table">
                     <thead>
-                        <th></th>
+                        <th>Select</Select></th>
                         <th>Category</th>
                          <th>Name</th>
                           <th>Price</th>
